test_programs/compile_failure/generics_on_integer_type/src/main.nr
fn main() {
    let _: i32<bool> = 1;
    let _ = i32::<bool>::default();
}
